--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
 <body>
     <section>
         <h2>Case Studies</h2>
-        <div class="workGrid">
-        <div> <img src=images/CelebrateOne.png></div>
+        <div class="container">
+        <div class="myFlexedImage"> <img src=images/CelebrateOne.png></div>
         <div><h4>CelebrateOne: Helping pregnant women & moms in need</h4></div>
         <div><img src="images/ImaginationLibrary.png"></div>
         <div><h4>Imagination Library: A mail-delivery book gifting program</h4></div>
         <div><img src="images/PlantTherapy.png"></div>
         <div><h4>Plant Therapy: An app based solution where plants come to thrive</h4></div>
         </div>
-    </section>
-
-
-
-
+    </div>
     </section>
 </body>
 </html>
