--- a/index.html
+++ b/index.html
@@ -17,17 +17,39 @@
     <title>Case Studies</title>
 </head>
 <body>
+    <div class="topnav">
+        <img src="images/logo.png">
+        <a href="mailto:sofia.s.baig@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/sofiabaig/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="images/Resume_SOFIABAIG.pdf" target="_blank">Résumé</a>
+        <a href="#">Case Studies</a>
+        <a href="#">About</a>  
+    </div>
     <section>
-        <h2>Case Studies</h2>
+        <p>
+        <h1>Case Studies</h1>
         <div class="container">
-        <div class="myFlexedImage"> <img src=images/CelebrateOne.png></div>
+        <div> <img src=images/CelebrateOne.png></div>
         <div><h4>CelebrateOne: Helping pregnant women & moms in need</h4></div>
         <div><img src="images/ImaginationLibrary.png"></div>
         <div><h4>Imagination Library: A mail-delivery book gifting program</h4></div>
         <div><img src="images/PlantTherapy.png"></div>
         <div><h4>Plant Therapy: An app based solution where plants come to thrive</h4></div>
         </div>
-    </div>
+    </p>
     </section>
+
+<section id="footerGrid">
+  <div class="content">
+      <div class="center"><h2>SAY HI!</h2></div>
+  <div class="footerSocial">
+          <div class="center">
+            <a href="mailto:sofia.s.baig@gmail.com" target="_blank"><i class="links far fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/sofiabaig/" target="_blank"><i class="links fab fa-linkedin-in"></i></a>
+        </div></div>   
+  <div class="footerCopyright">
+    <p>&#169; Sofia Baig 2021</p>
+  </div> 
+ </section>   
 </body>
 </html>
